crates/flotilla-tui/tests/snapshots/snapshots__selected_item_preview_below.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Checkouts ──────────────────────────────────────────────────────────────────────── ⚙
      Source     Path       Description          Branch     WT  WS  PR   SS   Issues Git
▸  ○                  feat… checkout feat-dashb… feat-dash… ✓
── Pull Requests ───────────────────────────────────────────────────────────────────────
      PR#    Title                                  Branch               State    Issues
   ⊙  #99    Build analytics dashboard              feat-dashboard       open

















┌ Preview ───────────────────────────────────────────────────────────────────────────────┐
│Description: checkout feat-dashboard                                                    │
│Branch: feat-dashboard                                                                  │
│Path: /test/my-project/feat-dashboard                                                   │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
│                                                                                        │
└────────────────────────────────────────────────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX           ▤ below   @local
