crates/flotilla-tui/tests/snapshots/snapshots__single_repo_with_items.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Checkouts ────────────────────────────────────────────────────── ⚙   ┌ Preview ─────────────────────────────────────┐
      Source     Path  Description Branch WT  WS  PR   SS   Issues Git  │Description: checkout feat-login              │
▸  ○               fe… checkout f… feat-… ✓                             │Branch: feat-login                            │
── Sessions ──────────────────────────────────────────────────────────  │Path: /test/my-project/feat-login             │
      Source     Key         Description            Branch      Status  │                                              │
   ◆             s1          session s1             feat/sessi… ◆       │                                              │
── Pull Requests ─────────────────────────────────────────────────────  │                                              │
      PR#    Title                      Branch         State    Issues  │                                              │
   ⊙  #42    Add login page             feat-login     open             │                                              │
── Issues ────────────────────────────────────────────────────────────  │                                              │
      ID     Title                              Labels            PR    │                                              │
   ◇  #10    Users need authentication                                  │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND              ◫ auto   @local
