crates/flotilla-tui/tests/snapshots/snapshots__status_bar_layout_state.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                                                                    ⚙
















┌ Preview ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND             ▤ below   @local
