crates/flotilla-tui/tests/snapshots/snapshots__status_bar_narrow_width_prioritizes_status_over_keys.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙
















┌ Preview ─────────────────────────────────────────────────────────────┐
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
│                                                                      │
└──────────────────────────────────────────────────────────────────────┘
ERROR Remote host unreachable × <q> QUIT              ◫ auto   @local
