crates/flotilla-tui/tests/snapshots/snapshots__status_bar_preview_state.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
assertion_line: 186
expression: output
---
 ⚓  flotilla  | my-project | [+]
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────── ⚙ ┐
│      Source     Path              Description                        Branch            WT  WS  PR   SS   Issues Git  │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Preview ─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 enter:open  v:preview  P:hide  preview:below  .:menu  /:search  n:new  r:refresh  space:select  ?:help  q:quit
