crates/flotilla-tui/tests/snapshots/snapshots__status_bar_with_multiple_in_flight_commands.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX           ◫ auto   @local - Refreshing repository... (+1)
