crates/flotilla-tui/tests/snapshots/snapshots__tab_bar_multiple_repos.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | alpha ×  | beta | gamma | [+]
                                                                    ⚙   ┌ Preview ─────────────────────────────────────┐
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        │                                              │
                                                                        └──────────────────────────────────────────────┘
: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND              ◫ auto   @local
