crates/flotilla-tui/tests/snapshots/snapshots__zoom_layout_uses_full_content_area.snap
---
source: crates/flotilla-tui/tests/snapshots.rs
expression: output
---
 ⚓  flotilla  |  🚢  convoys  | my-project ×  | [+]
── Checkouts ────────────────────────────────────────────────────────────────────────────────────────────────────── ⚙
      Source     Path              Description                         Branch             WT  WS  PR   SS   Issues Git
▸  ○                   feat-dashb… checkout feat-dashboard             feat-dashboard     ✓

























: for commands               <q> QUIT  <h> HELP  <?> CTX  <:> COMMANDS  </> FIND              □ zoom   @local
